--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.8.0",
     "install": "^0.13.0",
     "mathjs": "^11.8.0",
     "prop-types": "^15.8.1",
@@ -18,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "styled-components": "^5.3.10",
     "typeface-roboto": "^1.1.13",
     "uuid": "^9.0.0"
