--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.1",
