--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
+    "identity-obj-proxy": "^3.0.0",
     "install": "^0.13.0",
     "mathjs": "^11.8.0",
     "prop-types": "^15.8.1",
