--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "identity-obj-proxy": "^3.0.0",
     "install": "^0.13.0",
     "mathjs": "^11.8.0",
+    "openai": "^4.28.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
