--- a/client/package.json
+++ b/client/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
+    "netlify-cli": "^17.23.2",
     "prettier": "2.7.1",
     "react-test-renderer": "^18.2.0"
   }
