--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://lessoncraft-ai-server.onrender.com/",
   "name": "node-react-app",
   "version": "0.1.0",
   "private": true,
